1.5
  * recognize .ico and .jpeg as images
    Changed files: wc/filter/Blocker.py
  * Updated and reorganized filters
    Changed files: config/*.zap, config/bl2wc.py
  * When Content-Type header is not what we guessed, fix only some
    contents, not all
    Changed files: wc/proxy/HttpServer.py
  * - use flex memory management interface
    - use only double quotes for attribute quoting
    - check quoting of all attributes
    Changed files: wc/parser/htmllex.l

1.4
  * blocked.html has no content anymore and displays much cleaner
    Changed files: config/blocked.html
  * remove old and superfluous options from webcleanerconf, added
    tooltip help, fixed host config parsing
    Changed files: wc/gui/*.py, wc/__init__.py
  * - ignore invalid html attribute characters
    - ignore trailing garbage on html end tags
    - fixed debugging code with flex
    Changed files: wc/parser/htmllex.l
  * build with flex 2.5.25
    Changed files: wc/parser/{Makefile, htmllex.c}

1.3
  * Updated advert filters
    Changed files: config/adverts.zap
  * Local HTML configuration
    Changed files: wc/proxy/ClientServerMatchMaker.py
    Added files: wc/webgui/{__init__.py, WebConfig.py}
  * Added README.parser and README.sshtunnel to documents
  * import DeflateStream, fixes pages with content-encoding: deflate
    Changed files: wc/proxy/HttpServer.py
  * Add netmask support for allowed/denied host configuration
    Changed files: wc/__init__.py
    Added files: wc/ip.py

1.2
  * quote attribute values ending in '/'
    Changed files: wc/parser/htmllex.l

1.1
  * Dont try to remove the .pid file on startup errors, because we
    might already have dropped root privileges

1.0
  * Print access denied messages on stderr
    Changed files: wc/proxy/HttpClient.py
  * Remove unsupported timeout and obfuscateip config options
    Changed files: wc/gui/ConfWindow.py, wc/__init__.py, README,
      config/webcleaner.conf
  * Updated ssh tunnel scripts